# ncsms-android

./: .gitignore  .travis.yml  AndroidManifest.xml  CMakeLists.txt  PRIVACY_POLICY.md  README-de.md  README.md  build.gradle  issue_template.md  lint.xml  project.properties  settings.gradle
.github/workflows/: actions.yml
.tx/: config  config_20221003032252.bak
gradle/wrapper/: gradle-wrapper.properties
ncsmsgo/: build.gradle
res/drawable/: standard_button.xml
res/layout/: activity_login.xml  activity_main.xml  fragment_mainactivity_gotosettings.xml  fragment_mainactivity_main.xml  fragment_mainactivity_thanks_note.xml
res/menu/: main.xml
res/values/: google_playstore_strings.xml  strings.xml  styles.xml  sv_google_playstore_strings.xml
res/values-cs/: google_playstore_strings.xml  strings.xml
res/values-de/: google_playstore_strings.xml  strings.xml
res/values-en/: google_playstore_strings.xml  strings.xml
res/values-es/: google_playstore_strings.xml  strings.xml
res/values-fr/: google_playstore_strings.xml  strings.xml
res/values-sr/: google_playstore_strings.xml  strings.xml
res/values-sv/: google_playstore_strings.xml  strings.xml
res/values-v14/: styles.xml
res/xml/: owncloud_account_authenticator.xml  pref_data_sync.xml  sync_adapter.xml
src/fr/unix_experience/owncloud_sms/: MainActivity.java
src/main/: AndroidManifest.xml
src/main/cpp/: httpclient.cpp  httpclient.h  json.cpp  json.h  macro_helpers.h  nativesms.cpp  smsbuffer.cpp  smsbuffer.h
src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  (+3 more)
(+245 files in other folders)
